--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ paginate = 5
 
 defaultContentLanguage = "ja"
 hasCJKLanguage = true
-googleAnalytics = ""
+googleAnalytics = "UA-5618431-10"
 enableRobotsTXT = true
 
 title = "Aktnk Lab"
