Update Google Analytics ID

--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ paginate = 5
 
 defaultContentLanguage = "ja"
 hasCJKLanguage = true
-googleAnalytics = "UA-5618431-10"
+googleAnalytics = "G-S27RTQ1SDM"
 enableRobotsTXT = true
 
 title = "Aktnk Lab"
